# mimalloc_rust

./: Cargo.toml
libmimalloc-sys/: Cargo.toml  build.rs
src/: lib.rs
