[package]
name = "libmimalloc-sys"
version = "0.1.18"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust/tree/master/libmimalloc-sys"
keywords = ["allocator", "encrypted-heap", "performance"]
categories = ["allocator"]
description = "Sys crate wrapping the mimalloc allocator"
license = "MIT"
links = "mimalloc"
build = "build/main.rs"

[dependencies]
cty = { version = "0.2", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[features]
secure = []
override = []
extended = ["cty"]
local_dynamic_tls = []
# Use `cmake` to build mimalloc if it's installed and likely to work.
prefer_cmake = []
debug_full = []
show_errors = []
compile_cxx = []

# Show `extended` on docs.rs since it's the full API surface.
[package.metadata.docs.rs]
features = ["extended"]
