[package]
name = "libmimalloc-sys"
version = "0.1.18"
authors = ["Octavian Oncescu <octavonce@gmail.com>"]
edition = "2018"
repository = "https://github.com/purpleprotocol/mimalloc_rust/tree/master/libmimalloc-sys"
keywords = ["allocator", "encrypted-heap", "performance"]
categories = ["allocator"]
description = "Sys crate wrapping the mimalloc allocator"
license = "MIT"
links = "mimalloc"
build = "build/main.rs"

[dependencies]
cty = { version = "0.2", optional = true }

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[features]
secure = []
unsafe_override_libc_allocators = []
extended = ["cty"]
local_dynamic_tls = []
# Use `cmake` to build mimalloc if it's installed and likely to work.
cmake_if_possible = []
# prefer_cmake = []
# prefer_cc = []
compile_as_cxx = []

# Run full invariant checking. Slow.
full_debug = []

# Enable aborting on allocation failure.
abort_on_alloc_fail = []

# Show `extended` on docs.rs since it's the full API surface.
[package.metadata.docs.rs]
features = ["extended"]
